fix: Set nowrap for page toc

--- a/static_content/assets/sass/main.scss
+++ b/static_content/assets/sass/main.scss
@@ -1386,6 +1386,7 @@ blockquote {
     .bd-toc-link {
       display: inline;
       padding: 0.25rem 0;
+      white-space: nowrap;
     }
 
     &.highlighted {
